<resources>
    <string name="app_name">NutriEngine</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>

    <string name="go_back">Back</string>
    <!-- Home Page-->
    <string name="home_welcome">Welcome to Eatrition</string>
    <string name="logging_in">Log In</string>
    <string name="sign_up">Register</string>
    <string name="add_foods_to_db">Add Foods Record</string>
    <string name="update_button">Update</string>

    <!-- Food Page-->
    <string name="food_name_hint">Enter Food</string>
    <string name="food_id_hint">Enter Food ID</string>
    <string name="click_button">Submit</string>
    <string name="calories">Calories Amt:</string>
    <string name="sugar">Sugar Amt:</string>
    <string name="sodium">Sodium Amt:</string>
    <string name="vit_c">VitaminC Amt:</string>
    <string name="vit_a">VitaminA Amt:</string>

    <!-- Common User Page -->
    <string name="database_page">Go To Food</string>
    <string name="history_page">User History</string>
    <string name="today_summary">Today Summary</string>

    <!-- User Login in-->
    <string name="login_user"> Log In</string>
    <string name="user_hint">Enter User Name</string>
    <string name="day_hint">Enter Day</string>
    <string name="month_hint">Enter Month</string>
    <string name="year_hint">Enter Year</string>

    <!-- User Register -->
    <string name="register_text">User Registration</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="age_hint">Enter Your Age</string>
    <string name="height_hint">Enter Your Height in CM</string>
    <string name="weight_hint">Enter Your Weight in KG</string>
    <string name="register_user">Register</string>

    <!-- User Home Page -->
    <string name="food_click">Enter Food</string>
    <string name="recommend_click">Get Recommend</string>
    <string name="current_activity_click">See Today Activity</string>
    <string name="history_activity_click">See History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

