<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->

    <data>
        <variable
            name="currentViewModel"
            type="com.naylwin.nutriengine.usertracker.CurrentViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".usertracker.CurrentFragment">


        <TextView
            android:id="@+id/sugar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sugar"
            app:layout_constraintEnd_toEndOf="@+id/calories_text"
            app:layout_constraintStart_toStartOf="@+id/calories_text"
            app:layout_constraintTop_toBottomOf="@+id/calories_text" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="PersonA" />

        <TextView
            android:id="@+id/cal_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/calories_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            tools:text="None" />

        <TextView
            android:id="@+id/sugar_amt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/sugar_text"
            app:layout_constraintEnd_toEndOf="@+id/cal_amount_text"
            app:layout_constraintStart_toStartOf="@+id/cal_amount_text"
            tools:text="None" />

        <TextView
            android:id="@+id/sodium_amt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/sodium_text"
            app:layout_constraintEnd_toEndOf="@+id/sugar_amt_text"
            app:layout_constraintStart_toStartOf="@+id/sugar_amt_text"
            tools:text="None" />

        <TextView
            android:id="@+id/vitc_amt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/vit_c_text"
            app:layout_constraintEnd_toEndOf="@+id/sodium_amt_text"
            app:layout_constraintStart_toStartOf="@+id/sodium_amt_text"
            tools:text="None" />

        <TextView
            android:id="@+id/calories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/calories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_text"
            app:layout_constraintVertical_bias="0.077" />

        <TextView
            android:id="@+id/sodium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sodium"
            app:layout_constraintEnd_toEndOf="@+id/sugar_text"
            app:layout_constraintStart_toStartOf="@+id/sugar_text"
            app:layout_constraintTop_toBottomOf="@+id/sugar_text" />

        <TextView
            android:id="@+id/vit_c_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/vit_c"
            app:layout_constraintEnd_toEndOf="@+id/sodium_text"
            app:layout_constraintStart_toStartOf="@+id/sodium_text"
            app:layout_constraintTop_toBottomOf="@+id/sodium_text" />

        <TextView
            android:id="@+id/vit_a_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/vit_a"
            app:layout_constraintEnd_toEndOf="@+id/vit_c_text"
            app:layout_constraintStart_toStartOf="@+id/vit_c_text"
            app:layout_constraintTop_toBottomOf="@+id/vit_c_text" />

        <TextView
            android:id="@+id/vita_amt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/vit_a_text"
            app:layout_constraintEnd_toEndOf="@+id/vitc_amt_text"
            app:layout_constraintStart_toStartOf="@+id/vitc_amt_text"
            tools:text="None" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:layout_marginEnd="216dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="205dp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/goback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_button" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vit_a_text"
            app:layout_constraintVertical_bias="0.462" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text"
            tools:text="Date" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
